--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -37,7 +37,7 @@
             </select>
 
             <ng-container *ngIf="moduleSelected">
-                <div class="container-item" id="simulation-globals">
+                <div class="section-item" id="simulation-globals">
                     <div>Simulation Globals</div>
                     <div class="form-row">
                         <div>Site name: <input type="text"></div>
@@ -50,7 +50,15 @@
                 </div>
             </ng-container>
 
-            <div class="container-item" *ngIf="moduleSelected && !stream">
+            <div class="section-item">
+                <div>Module specific flags?</div>
+                <div><input type="checkbox"/>Flag 1</div>
+                <div><input type="checkbox"/>Flag 2</div>
+                <div><input type="checkbox"/>Flag 3</div>
+                <div class="button" (click)="getBaseJSONByFlags()">Get Base JSON</div>
+            </div>
+
+            <div class="section-item" *ngIf="moduleSelected && !stream">
                 <ng-container *ngIf="!huc || !catchment">
                     No area of interest
                 </ng-container>
@@ -60,14 +68,18 @@
             </div>
 
             <ng-container *ngIf="stream && moduleSelected">
-                <div class="container-item">
+                <div class="section-item">
+                    <div>Load Network</div>
                     <div>Boundry stream segments</div>
                 </div>
 
-                <div class="container-item" id="segment-form">
+                <div class="section-item" id="segment-form">
                     <div>Stream segment loading</div>
                     <app-comid-select-input></app-comid-select-input>
                 </div>
+            </ng-container>
+            <ng-container class="container-item" *ngIf="true">
+                <div class="button" (click)="executeSimulation()">Execute Aquatox Simulation</div>
             </ng-container>
         </div>
 
@@ -104,7 +116,7 @@
                 <div>HMS data</div>
                 <div *ngIf="!responseList.length">Make HMS request to retrieve data</div>
                 <div style="width: 100%;" *ngFor="let response of responseList" class="button" (click)="gotoData(response.endpoint)">
-                    {{ response.endpoint }}{{ response.dataSource }}{{ response.dataset }}<mat-icon>delete</mat-icon>
+                    <div>{{ response.endpoint }} {{ response.dataSource }} {{ response.dataset }} <mat-icon title="Download Data">download</mat-icon> <mat-icon title="Remove Data">delete</mat-icon></div>
                 </div>
             </div>
         </div>
