--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -69,7 +69,8 @@
 
             <ng-container *ngIf="stream && moduleSelected">
                 <div class="section-item">
-                    <div>Load Network</div>
+                    <div>This is going to ba a list of segments touched by user and that cross huc boundries. clicking on an entry loads that segment into the stream segment loading panel below and highlights segment on map</div>
+                    <div>Network Loadings</div>
                     <div>Boundry stream segments</div>
                 </div>
 
