--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -82,7 +82,7 @@
 
             <ng-container *ngIf="stream && moduleSelected">
                 <div class="section-item">
-                    <div>This is going to ba a list of segments touched by user and those that cross huc boundries. clicking on an entry loads that segment into the stream segment loading panel below and highlights segment on map</div>
+                    <div>This is going to be a list of segments touched by user and those that cross huc boundries. clicking on an entry loads that segment into the stream segment loading panel below and highlights segment on map</div>
                     <div>Boundry stream segments...</div>
                     <div>User edited segments...</div>
                     
