--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -1,6 +1,6 @@
 <div class="container-col-1">
     <div class="scroll-pane">
-        <div class="container-item">
+        <div class="container-item first-item">
             <div>Area of Interest</div>
             <!-- <div id="coords-form" [formGroup]="aoiForm">
                 <div>Lat <input type="number" formControlName="lat"/></div>
