added segment-list, input layout changes

--- a/src/app/components/input/comid-select-input/comid-select-input.component.html
+++ b/src/app/components/input/comid-select-input/comid-select-input.component.html
@@ -1,3 +1,4 @@
+<div>Stream segment loading</div>
 <h4>Comid: {{ selectedComId || "no stream segment selected" }}</h4>
 <form class="form-row" [formGroup]="inputFormGroup" *ngIf="selectedComId">
     <label>SV Index</label>
