--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -2,41 +2,44 @@
     <div class="scroll-pane">
         <div class="container-item first-item">
             <div>Area of Interest</div>
-            <!-- <div id="coords-form" [formGroup]="aoiForm">
-                <div>Lat <input type="number" formControlName="lat"/></div>
-                <div>Lng <input type="number" formControlName="lng"/></div>
-            </div> -->
-            <select>
-                <option value="12">HUC 12</option>
-            </select>
-            <div *ngIf="!huc"><strong>Click map to select huc</strong></div>
-            <div class="control" *ngIf="huc">
-                <div>{{ huc.name }}</div>
-                <div>HUC {{ huc.id }}</div>
-                <div class="button" (click)="clearHuc()">Clear HUC</div>
-            </div>
-            <div class="control" *ngIf="huc">
-                <div *ngIf="!catchment"><strong>Click map to select catchment</strong></div>
-                <div *ngIf="catchment">
-                    <div>Catchment {{ catchment.id || 'select catchment' }}</div>
-                    <div class="button" (click)="clearCatchment()">Clear catchment</div>
+            <div class="section-item">
+                <!-- <div id="coords-form" [formGroup]="aoiForm">
+                    <div>Lat <input type="number" formControlName="lat"/></div>
+                    <div>Lng <input type="number" formControlName="lng"/></div>
+                </div> -->
+                <div *ngIf="!huc"><strong>Click map to select </strong>
+                    <select>
+                        <option value="12">HUC 12</option>
+                    </select>
                 </div>
-            </div>
-            <div class="control" *ngIf="huc && catchment && !stream" [formGroup]="distanceForm">
-                <div class="form-row">Upstream distance (Km)<input type="number" formControlName="distance"></div>
-                <div class="button" *ngIf="!loadingStream" (click)="getStreamNetwork()">Get stream network</div>
-                <div class="button" *ngIf="loadingStream"><mat-progress-bar mode="indeterminate"></mat-progress-bar></div>
+                <div class="control" *ngIf="huc">
+                    <div>{{ huc.name }}</div>
+                    <div>HUC {{ huc.id }}</div>
+                    <div class="button" (click)="clearHuc()">Clear HUC</div>
+                </div>
+                <div class="control" *ngIf="huc">
+                    <div *ngIf="!catchment"><strong>Click map to select catchment</strong></div>
+                    <div *ngIf="catchment">
+                        <div>Catchment {{ catchment.id || 'select catchment' }}</div>
+                        <div class="button" (click)="clearCatchment()">Clear catchment</div>
+                    </div>
+                </div>
+                <div class="control" *ngIf="huc && catchment && !stream" [formGroup]="distanceForm">
+                    <div class="form-row">Upstream distance (Km)<input type="number" formControlName="distance"></div>
+                    <div class="button" *ngIf="!loadingStream" (click)="getStreamNetwork()">Get stream network</div>
+                    <div class="button" *ngIf="loadingStream"><mat-progress-bar mode="indeterminate"></mat-progress-bar></div>
+                </div>
             </div>
         </div>
 
         <div class="container-item" [formGroup]="moduleForm">
             <div>Aquatox</div>
-            <select formControlName="moduleSelect" (change)="selectModule()">
-                <option [value]='null' selected>Select Aquatox module</option>
-                <option *ngFor="let module of atxModules">{{ module }}</option>
-            </select>
 
             <div class="section-item">
+                <select formControlName="moduleSelect" (change)="selectModule()">
+                    <option [value]='null' selected>Select Aquatox module</option>
+                    <option *ngFor="let module of atxModules">{{ module }}</option>
+                </select>
                 <div>Module specific flags?</div>
                 <div><input type="checkbox"/>Flag 1</div>
                 <div><input type="checkbox"/>Flag 2</div>
@@ -80,19 +83,11 @@
                 </ng-container>
             </div>
 
-            <ng-container *ngIf="stream && moduleSelected">
-                <div class="section-item">
-                    <div>This is going to be a list of segments touched by user and those that cross huc boundries. clicking on an entry loads that segment into the stream segment loading panel below and highlights segment on map</div>
-                    <div>Boundry stream segments...</div>
-                    <div>User edited segments...</div>
-                    
-                </div>
-
-                <div class="section-item" id="segment-form">
-                    <div>Stream segment loading</div>
-                    <app-comid-select-input></app-comid-select-input>
-                </div>
-            </ng-container>
+            <div class="section-item" id="segment-form">
+            <!-- <ng-container *ngIf="stream && moduleSelected" class="section-item" id="segment-form"> -->
+                <app-segment-list></app-segment-list>
+                <app-comid-select-input></app-comid-select-input>
+            </div>
             <ng-container class="container-item" *ngIf="true">
                 <div class="button" (click)="executeSimulation()">Execute Aquatox Simulation</div>
             </ng-container>
