--- a/src/app/components/input/comid-select-input/comid-select-input.component.css
+++ b/src/app/components/input/comid-select-input/comid-select-input.component.css
@@ -8,3 +8,19 @@
     grid-template-columns: 1fr 1fr;
     row-gap: .5rem;
 }
+
+.button {
+    font-size: .75rem;
+    display: grid;
+    place-items: center;
+    height: 30px;
+    border-radius: 5px;
+    margin-bottom: .125rem;
+    color: lightgoldenrodyellow;
+    background-color: steelblue;
+}
+
+.button:hover {
+    background: rgba(146, 146, 146, 0.5);
+    cursor: pointer;
+}
