--- a/src/app/components/input/comid-select-input/comid-select-input.component.html
+++ b/src/app/components/input/comid-select-input/comid-select-input.component.html
@@ -8,7 +8,30 @@
     <label *ngIf="useConstLoadings">Constant Loading</label>
     <input *ngIf="useConstLoadings" formControlName="constLoading" type="text">
     <label *ngIf="!useConstLoadings">Upload Alternate Loadings</label>
-    <input *ngIf="!useConstLoadings" formControlName="altLoadings" type="file">
+    <input *ngIf="!useConstLoadings" 
+     formControlName="altLoadings"
+     type="file"  
+     accept=".csv"
+     name="files[]"
+     (change)="onFileChange($event)"
+    />
+
     <label>Loading Multiplier</label>
     <input formControlName="loadingMulti" type="text">
 </form>
+<div *ngIf="uploadedTimeSeries">
+  <table mat-table [dataSource]="dataSource">
+    <ng-container *ngFor="let disCol of columnNames" matColumnDef="{{disCol}}">
+      <th mat-header-cell *matHeaderCellDef>
+        <div>{{ disCol }}</div>
+      </th>
+      <td mat-cell *matCellDef="let row">{{ row[disCol] }}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="columnNames"></tr>
+
+    <tr mat-row *matRowDef="let row; columns: columnNames"></tr>
+  </table>
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+  <div class="button">Validate TimeSeries</div>
+</div>
