--- a/src/app/components/input/comid-select-input/comid-select-input.component.css
+++ b/src/app/components/input/comid-select-input/comid-select-input.component.css
@@ -24,3 +24,8 @@
     background: rgba(146, 146, 146, 0.5);
     cursor: pointer;
 }
+
+.table-flex-container {
+    overflow: auto;
+    display: flex;
+}
