--- a/src/app/components/input/comid-select-input/comid-select-input.component.html
+++ b/src/app/components/input/comid-select-input/comid-select-input.component.html
@@ -20,18 +20,20 @@
     <input formControlName="loadingMulti" type="text">
 </form>
 <div *ngIf="uploadedTimeSeries">
-  <table mat-table [dataSource]="dataSource">
-    <ng-container *ngFor="let disCol of columnNames" matColumnDef="{{disCol}}">
-      <th mat-header-cell *matHeaderCellDef>
-        <div>{{ disCol }}</div>
-      </th>
-      <td mat-cell *matCellDef="let row">{{ row[disCol] }}</td>
-    </ng-container>
+  <div class="table-flex-container">
+    <table mat-table [dataSource]="dataSource">
+      <ng-container *ngFor="let disCol of columnNames" matColumnDef="{{disCol}}">
+        <th mat-header-cell *matHeaderCellDef>
+          <div>{{ disCol }}</div>
+        </th>
+        <td mat-cell *matCellDef="let row">{{ row[disCol] }}</td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="columnNames"></tr>
+      <tr mat-header-row *matHeaderRowDef="columnNames"></tr>
 
-    <tr mat-row *matRowDef="let row; columns: columnNames"></tr>
-  </table>
+      <tr mat-row *matRowDef="let row; columns: columnNames"></tr>
+    </table>
+  </div>
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
   <div class="button">Validate TimeSeries</div>
 </div>
