--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -35,7 +35,7 @@
         <div class="container-item" [formGroup]="moduleForm">
             <div>Aquatox</div>
 
-            <div class="section-item" *ngIf="jsonFlags">
+            <div class="section-item" *ngIf="jsonFlags && !baseJson">
                 <!-- <select formControlName="moduleSelect" (change)="selectModule()">
                     <option [value]='null' selected>Select Aquatox module</option>
                     <option *ngFor="let module of atxModules">{{ module }}</option>
@@ -43,6 +43,9 @@
                 <div>Module specific flags</div>
                 <div *ngFor='let flag of jsonFlags'><input formControlName="{{flag}}" type="checkbox"/> {{ flag }}</div>
                 <div class="button" (click)="getBaseJSONByFlags()">Get base JSON</div>
+            </div>
+            <div class="section-item" *ngIf="baseJson">
+                <div class="button" (click)="clearBaseJson()">Clear Sumulation Base JSON</div>
             </div>
 
             <ng-container *ngIf="baseJson">
