fix layer control names

--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -45,7 +45,7 @@
                 <div class="button" (click)="getBaseJSONByFlags()">Get base JSON</div>
             </div>
             <div class="section-item" *ngIf="baseJson">
-                <div class="button" (click)="clearBaseJson()">Clear Sumulation Base JSON</div>
+                <div class="button" (click)="clearBaseJson()">Clear Base Simulation</div>
             </div>
 
             <ng-container *ngIf="baseJson">
