--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -42,7 +42,7 @@
                 </select> -->
                 <div>Module Selection Flags</div>
                 <div *ngFor='let flag of jsonFlags'><input formControlName="{{flag}}" type="checkbox"/> {{ flag }}</div>
-                <div class="button" (click)="getBaseJSONByFlags()">Get base JSON</div>
+                <div class="button" (click)="getBaseJSONByFlags()">Get Base Simulation</div>
             </div>
             <div class="section-item" *ngIf="baseJson">
                 <div class="button" (click)="clearBaseJson()">Clear Base Simulation</div>
