segment-list button active and hover styling

--- a/src/app/components/input/segment-list/segment-list.component.css
+++ b/src/app/components/input/segment-list/segment-list.component.css
@@ -8,3 +8,12 @@
     color: lightgoldenrodyellow;
     background-color: steelblue;
 }
+
+.button:hover {
+    background: rgba(146, 146, 146, 0.5);
+    cursor: pointer;
+}
+
+.active {
+    background-color: rgb(250, 146, 146);
+}
