--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,10 @@
     --main-active: rgb(250, 146, 146);
 }
 
+input[type='number'].input-comid {
+    width: 100px;
+}
+
 .button {
     font-size: .75rem;
     display: grid;
@@ -14,7 +18,7 @@
     height: 30px;
     border-radius: 5px;
     margin-bottom: .125rem;
-    color: var(--main-color);
+    /* color: var(--main-color); */
     background-color: var(--main-button);
 }
 
