--- a/src/app/components/input/comid-select-input/comid-select-input.component.html
+++ b/src/app/components/input/comid-select-input/comid-select-input.component.html
@@ -12,11 +12,69 @@
   </div>
   <div *ngFor="let parameter of parameters">{{ parameter }}</div>
   <div *ngFor="let source of sources">{{ source }}</div>
-  <div class="form-row">
+  <div class="form-row" *ngIf="!addingParameter && !addingSource">
     <div class="button" (click)="addParameter()">Add Parameter</div>
     <div class="button" (click)="addSource()">Add Source</div>
   </div>
+
   <div *ngIf="addingParameter">
+    New Parameter
+    <div class="form-row">
+      <label>Use Constant Loading?</label>
+      <input type="checkbox" (change)="useConstLoadings = !useConstLoadings" checked>
+    </div>
+    <div class="form-row">
+      <label *ngIf="useConstLoadings">Constant Loading</label>
+      <input *ngIf="useConstLoadings" formControlName="constLoading" type="text">
+    </div>
+    <div class="form-row">
+      <label *ngIf="!useConstLoadings">Upload Loading</label>
+      <input *ngIf="!useConstLoadings" 
+        formControlName="altLoadings"
+        type="file"  
+        accept=".csv"
+        name="files[]"
+        (change)="onFileChange($event)"
+      />
+    </div>
+    <div class="form-row">
+      <label>Loading Multiplier</label>
+      <input formControlName="loadingMulti" type="text">
+    </div>
+    <div *ngIf="uploadedTimeSeries">
+      <div class="table-flex-container">
+        <table mat-table [dataSource]="dataSource">
+          <ng-container *ngFor="let disCol of columnNames" matColumnDef="{{disCol}}">
+            <th mat-header-cell *matHeaderCellDef>
+              <div>{{ disCol }}</div>
+            </th>
+            <td mat-cell *matCellDef="let row">{{ row[disCol] }}</td>
+          </ng-container>
+    
+          <tr mat-header-row *matHeaderRowDef="columnNames"></tr>
+    
+          <tr mat-row *matRowDef="let row; columns: columnNames"></tr>
+        </table>
+      </div>
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    </div>
+    <div class="form-row">
+      <div class="button" (click)="cancelAdd()">Cancel</div>
+      <div class="button" (click)="insertParameter()">Insert Loadings</div>
+    </div>
+  </div>
+
+  <div *ngIf="addingSource">
+    New Source
+    <div class="form-row">
+      <div>Source Type</div>
+      <select>
+        <option>Point Source</option>
+        <option>Overland Flow</option>
+        <option>next</option>
+        <option>next</option>
+      </select>
+    </div>
     <div class="form-row">
       <label>Use Constant Loading?</label>
       <input type="checkbox" (change)="useConstLoadings = !useConstLoadings" checked>
