--- a/src/app/components/input/segment-list/segment-list.component.css
+++ b/src/app/components/input/segment-list/segment-list.component.css
@@ -1,3 +1,9 @@
+.list {
+    display: flex;
+    flex-direction: column;
+    row-gap: .125rem;
+}
+
 .form-row {
     display: grid;
     grid-template-columns: 1fr 1fr;
