--- a/src/app/components/map/map-control/map-control.component.css
+++ b/src/app/components/map/map-control/map-control.component.css
@@ -13,4 +13,7 @@
     border: 1px solid black;
     border-radius: 5px;
     background-color: var(--main-color);
+    display: flex;
+    flex-direction: column;
+    row-gap: .125rem;
 }
