add comid input duplication bug fix

--- a/src/app/components/input/segment-list/segment-list.component.html
+++ b/src/app/components/input/segment-list/segment-list.component.html
@@ -5,7 +5,7 @@
         <div>{{ segment }}</div>
     </div>
     <div>User Segments</div>
-    <div *ngIf="!userSegments.length">
+    <div *ngIf="!selectedComId">
         <strong>No user added segments</strong>
         <div>Click map to add a segment</div>
         <div>- or -</div>
