--- a/src/app/components/input/comid-select-input/comid-select-input.component.css
+++ b/src/app/components/input/comid-select-input/comid-select-input.component.css
@@ -2,11 +2,16 @@
     width: 100%;
 }
 
-.form-row,
-.controls {
+.segment-form {
+    display: flex;
+    flex-direction: column;
+    row-gap: var(--row-gap);
+}
+
+.form-row {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    row-gap: .5rem;
+    column-gap: var(--column-gap);
 }
 
 .table-flex-container {
