--- a/src/app/components/input/input/input.component.css
+++ b/src/app/components/input/input/input.component.css
@@ -9,19 +9,24 @@
 
 .container-item,
 .section-item {
-    margin: 5px;
+    margin: .25rem;
     padding: .5rem;
     border: 1px solid black;
     border-radius: 5px;
     background-color: var(--main-color);
+    display: flex;
+    flex-direction: column;
+    row-gap: var(--row-gap);
 }
 
 .section-item {
-    margin: 5px 0;
+    margin: 0px;
 }
 
-.first-item {
-    margin-top: 0;
+/* #segment-form {
+    display: flex;
+    flex-direction: column;
+    row-gap: var(--row-gap);
 }
 
 #endpoint-form {
@@ -31,22 +36,19 @@
 
 #parameter-form {
     display: grid;
-}
+} */
 
 .form-row,
 .controls {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    column-gap: var(--column-gap);
 }
 
 .control {
     display: grid;
     grid-template-columns: 1fr;
     width: 100%;
-}
-
-.controls {
-    column-gap: 1rem;
 }
 
 #mat-progress-bar {
