--- a/src/app/components/input/input/input.component.html
+++ b/src/app/components/input/input/input.component.html
@@ -24,11 +24,12 @@
                         <div class="button" (click)="clearCatchment()">Clear catchment</div>
                     </div>
                 </div>
-                <div class="control" *ngIf="huc && catchment && !stream" [formGroup]="distanceForm">
+                <div *ngIf="huc && catchment && !stream" [formGroup]="distanceForm">
                     <div class="form-row">Upstream distance (Km)<input type="number" formControlName="distance"></div>
-                    <div class="button" *ngIf="!loadingStream" (click)="getStreamNetwork()">Get stream network</div>
-                    <div class="button" *ngIf="loadingStream"><mat-progress-bar mode="indeterminate"></mat-progress-bar></div>
                 </div>
+                
+                <div class="button" *ngIf="huc && catchment && !stream && !loadingStream" (click)="getStreamNetwork()">Get stream network</div>
+                <div class="button" *ngIf="huc && catchment && !stream && loadingStream"><mat-progress-bar mode="indeterminate"></mat-progress-bar></div>
             </div>
         </div>
 
@@ -44,9 +45,7 @@
                 <div *ngFor='let flag of jsonFlags'><input formControlName="{{flag}}" type="checkbox"/> {{ flag }}</div>
                 <div class="button" (click)="getBaseJSONByFlags()">Get Base Simulation</div>
             </div>
-            <div class="section-item" *ngIf="baseJson">
-                <div class="button" (click)="clearBaseJson()">Clear Base Simulation</div>
-            </div>
+            <div class="button" *ngIf="baseJson" (click)="clearBaseJson()">Clear Base Simulation</div>
 
             <ng-container *ngIf="baseJson">
                 <div class="section-item" id="simulation-globals">
@@ -77,19 +76,20 @@
 
             <div class="section-item" *ngIf="baseJson && !stream">
                 <ng-container *ngIf="!huc || !catchment">
-                    No area of interest
+                    <strong>No area of interest</strong>
                 </ng-container>
                 <ng-container *ngIf="huc && catchment">
-                    No stream network
+                    <strong>No stream network</strong>
                 </ng-container>
             </div>
 
             <!-- <div class="section-item" id="segment-form"> -->
             <div *ngIf="stream && baseJson" class="section-item" id="segment-form">
+                <div>Segment Variables</div>
                 <app-segment-list></app-segment-list>
                 <app-comid-select-input></app-comid-select-input>
             </div>
-            <ng-container class="container-item" *ngIf="executionReady">
+            <ng-container class="container-item" *ngIf="baseJson && stream && executionReady">
                 <div class="button" (click)="executeSimulation()">Execute Aquatox Simulation</div>
             </ng-container>
         </div>
